k8s/ecommerce-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-api-deployment
  namespace: test-ecommerce
  labels:
    app: ecommerce-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-auth-service
  template:
    metadata:
      labels:
        app: ecommerce-auth-service
    spec:
      containers:
        - name: test-ecommerce-api
          image: registry.hextech.online/test-ecommerce/ecommerce-api:latest
          ports:
            - containerPort: 5000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api-service
  namespace: test-ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
