k8s/ecommerce-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: api-ingress
  namespace: test-ecommerce
spec:
  ingressClassName: nginx
  rules:
  - host: ecommerce.hextech.online
    http:
      paths:
      - backend:
          service:
            name: ecommerce-api-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ecommerce.hextech.online
    secretName: api-certificate
